--- a/notebooks/04-model-evaluation.ipynb
+++ b/notebooks/04-model-evaluation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "96ec3141-4261-4d3f-989c-0e40bfb4702d",
    "metadata": {
@@ -11,7 +12,7 @@
     "\n",
     "In this notebook, we learn about how to use scikit-learn for model evaluation.\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/thomasjpfan/ml-workshop-intermediate-v2/blob/main/04-model-evaluation.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>"
+    "<a href=\"https://colab.research.google.com/github/thomasjpfan/ml-workshop-intermediate-v2/blob/main/notebooks/04-model-evaluation.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>"
    ]
   },
   {
