ENH Use a different metric

--- a/notebooks/04-model-evaluation.ipynb
+++ b/notebooks/04-model-evaluation.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "96ec3141-4261-4d3f-989c-0e40bfb4702d",
    "metadata": {
@@ -581,7 +580,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load solutions/04-ex02-solutions.py"
+    "# %load solutions/04-ex05-solutions.py"
    ]
   },
   {
@@ -804,7 +803,8 @@
     "## Exercise 3\n",
     "\n",
     "1. Compute the `roc_auc_score` for the random forest on the test set. **Hint**: Use `predict_proba`.\n",
-    "2. Train a `sklearn.svm.SVC` model on the training dataset with `random_state=0` and compute the average precision.\n",
+    "2. Train a `sklearn.svm.SVC` model on the training dataset with `random_state=0`\n",
+    "3. Compute the average precision on the test set.\n",
     "    - **Hint**: Use `decision_function`."
    ]
   },
@@ -1251,7 +1251,7 @@
     "\n",
     "1. Create and train a `HistGradientBoostingRegressor` model.\n",
     "1. Plot the permutation importance for the gradient boosting model with `n_repeats=5` and `random_state=0`.\n",
-    "1. Evaluate the model on the training set using `score`.\n",
+    "1. Evaluate the model on the test set using `score`.\n",
     "1. How does the permtuation feature imporatance compare to random forest?"
    ]
   },
@@ -1497,7 +1497,8 @@
    "source": [
     "## Exercise 5\n",
     "\n",
-    "1. Get the permutation importance of the gradient booster (`hist`) using `permutation_importance`. **Hint**: Use `n_repeats=5` and `random_state=0`.\n",
+    "1. Get the permutation importance of the gradient booster (`hist`) using `permutation_importance` and `scoring=\"neg_mean_absolute_error\"`.\n",
+    "    - **Hint**: Use `n_repeats=5` and `random_state=0`.\n",
     "2. Plot the permutation importance of `hist` on the test set, by using `plot_permutation_importance` and `top_k=10`.\n",
     "3. Extract the top 4 features according to permutation importance into a variable `top_4_features`.\n",
     "4. Use `PartialDependenceDisplay.from_estimator` to plot the partial dependence of the `top_4_features."
@@ -1522,8 +1523,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16cf090-545e-43d3-b37a-ea424cb19950",
-   "metadata": {},
+   "id": "611955b1",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# %load solutions/04-ex05-solutions.py"
