ENH Improvements to wording

--- a/notebooks/01-pandas-output.ipynb
+++ b/notebooks/01-pandas-output.ipynb
@@ -240,10 +240,12 @@
     "## Exercise 1\n",
     "\n",
     "1. The Wisconsion cancer data set is loaded into `X` and `y`. Split the data set into a training and test set.\n",
-    "    - **Hint**: Remember to use `stratify=y`.\n",
+    "    - **Hint**: Remember to use `stratify=y` and `random_state=0`\n",
+    "2. How many features are there in the dataset?\n",
     "2. Which feature(s) or the dataset are missing?\n",
     "    - **Hint**: Use panda's `isna().sum()`\n",
-    "3. Use a `SimpleImputer` with `add_indicator=True` and `set_output(transform=\"pandas\")` and run `fit_transform` on the training set. What is the shape of the transformed data?"
+    "3. Use a `SimpleImputer` with `add_indicator=True` and `set_output(transform=\"pandas\")` and run `fit_transform` on the training set.\n",
+    "4. How many output features are there in the transformed data?"
    ]
   },
   {
@@ -265,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb6c354-5f2f-4f53-acbf-63d744dd213a",
+   "id": "19898a2a-e08f-44c9-addf-04bc80e620b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -301,7 +303,7 @@
     "1. Train the pipeline on the Wisconsion cancer training set and evaluate the performance of the model on the test set.\n",
     "1. Create a pandas series where the values is the coefficients of `LogisticRegression` and index is the `feature_names_in_`.\n",
     "    - **Hint**: The logistic regression estimator is the final step of the pipeline. \n",
-    "    - **Hint**: The coefficients are stored as `coef_` in logistic regression estimator. (Use `ravel` to flatten the array)\n",
+    "    - **Hint**: The coefficients are stored as `coef_` in logistic regression estimator. (Use `ravel` to flatten the `coef_` array)\n",
     "1. Which feature has a negative impact on cancer?"
    ]
   },
