--- a/notebooks/02-categorical-data.ipynb
+++ b/notebooks/02-categorical-data.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ce569fcc-9b9f-43b5-8f5b-a93723c3b9c8",
    "metadata": {
@@ -280,6 +279,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "128abc36-258a-439c-9531-efc5a6aede22",
+   "metadata": {},
+   "source": [
+    "### Pandas output requires non-sparse data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "29e4523b-8713-4a0a-9360-7025a1d7dc73",
@@ -435,6 +442,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64bb2967-6c4f-4d1a-8662-57ea5ba80bbc",
+   "metadata": {},
+   "source": [
+    "## Back to slides!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "768ddd03-b6a1-45e0-81c7-ae294b288ad8",
    "metadata": {},
    "source": [
@@ -582,7 +597,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8ecf39d5-3c8c-45c4-b42c-b9dfd4a20281",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_openml"
@@ -592,7 +609,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6258fda1-45ef-472c-974d-3f53113f30b7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "titanic = fetch_openml(data_id=40945, as_frame=True, parser=\"pandas\")"
@@ -823,7 +842,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d68f0671-b529-4250-adec-1bcad46b1945",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "missing_values"
@@ -1056,7 +1077,9 @@
     "1. The Penguin dataset is loaded into `X` and `y`. Is `y` a classification or regression problem?\n",
     "1. What are the feature names in the dataset?\n",
     "1. Which features have missing values?\n",
-    "1. What are the categorical features and the numerical features? Store them into `categorical_features` and `numerical_features` respectively."
+    "1. What are the categorical features and the numerical features? Store them into `categorical_features` and `numerical_features` respectively.\n",
+    "    - **Hint:** Use `df.select_dtypes(include=\"category\").columns` to find the cateogrical features\n",
+    "    - **Hint:** Use `df.select_dtypes(include=\"number\").columns` to find the numerical features"
    ]
   },
   {
@@ -1095,7 +1118,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0c3259f2-67e8-4db0-856a-95f306ece5e4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# %load solutions/02-ex01-solutions.py"
@@ -1112,7 +1137,7 @@
     "1. Build a `ColumnTransformer` for the penguin dataset with the following transformers:\n",
     "    - For the numerical features use a `SimpleImputer`\n",
     "    - For the categorical features use a `OrdinalEncoder` with `encoded_missing_value=-1`.\n",
-    "    - **Hint:** Use `verbose_feature_names_out=True`\n",
+    "    - **Hint:** Use `verbose_feature_names_out=False`\n",
     "1. Build a pipeline with the `ColumnTransformer` from the previous step and a `RandomForestClassifier` with `random_state=0`.\n",
     "1. Evalute the model on the test set."
    ]
@@ -1137,7 +1162,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e488a85a-333e-416f-993c-4d019838193a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# %load solutions/02-ex02-solutions.py"
