--- a/notebooks/03-parameter-tuning.ipynb
+++ b/notebooks/03-parameter-tuning.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "617dbbe4-2ec5-4667-9478-0f4445198b49",
    "metadata": {
@@ -301,7 +300,8 @@
     "\n",
     "2. What were the best hyper-parameters found by the random search?\n",
     "3. Evaluate the model on the test set.\n",
-    "4. Use `HalvingRandomSearchCV` with the same `param_dist`. What is the best hyper-parameters found by this search? Evaluate on the test set. Does these hyperparameters perform better than the one found in step 1? (**Hint**: `n_iter` is not required and set `verbose=1`)"
+    "4. Use `HalvingRandomSearchCV` with the same `param_dist`. What is the best hyper-parameters found by this search? Evaluate on the test set. Does these hyperparameters perform better than the one found in step 1? \n",
+    "    - **Hint**: `n_iter` is not required and set `verbose=1`"
    ]
   },
   {
@@ -346,7 +346,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "99d44764-3162-45d5-86f8-543a863a7e4b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# %load solutions/03-ex01-solutions.py"
@@ -647,7 +649,8 @@
     "## Exercise 2\n",
     "\n",
     "1. A `column_transformer` is provided to preprocess the penguin dataset. Call `fit_transform` on `X_train` and store the output as `X_transformed`. Are there missing values in the transformed dataset?\n",
-    "1. Construct a Pipeline with the `column_transformer` and a `HistGradientBoostingClassifier`. **Hint:** Set the `random_state=0` for the gradient booster.\n",
+    "1. Construct a Pipeline with the `column_transformer` and a `HistGradientBoostingClassifier`.\n",
+    "    - **Hint:** Set the `random_state=0` for the gradient booster.\n",
     "1. Create a `HalvingGridSearchCV` with that searches through the following params in the gradient booster:\n",
     "     - `l2_regularization`: `[0, 0.1, 1, 10]`\n",
     "     - `hist__max_bins`: `[32, 64, 128, 255]`\n",
@@ -697,7 +700,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b4f47aaa-49f4-4e2e-b7c9-2389fe943cca",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# %load solutions/03-ex02-solutions.py"
