ENH Update wording and slides

--- a/notebooks/01-pandas-output.ipynb
+++ b/notebooks/01-pandas-output.ipynb
@@ -239,13 +239,16 @@
    "source": [
     "## Exercise 1\n",
     "\n",
-    "1. The Wisconsion cancer data set is loaded into `X` and `y`. Split the data set into a training and test set.\n",
-    "    - **Hint**: Remember to use `stratify=y` and `random_state=0`\n",
-    "2. How many features are there in the dataset?\n",
-    "2. Which feature(s) or the dataset are missing?\n",
+    "1. The Wisconsion cancer data set is loaded into `X` and `y`.\n",
+    "1. How many features are there in the dataset?\n",
+    "1. Which feature(s) or the dataset are missing?\n",
     "    - **Hint**: Use panda's `isna().sum()`\n",
-    "3. Use a `SimpleImputer` with `add_indicator=True` and `set_output(transform=\"pandas\")` and run `fit_transform` on the training set.\n",
-    "4. How many output features are there in the transformed data?"
+    "1. Split the data set into a training and test set.\n",
+    "    - **Hint**: Remember to use `stratify=y` and `random_state=0` \n",
+    "1. Use a `SimpleImputer` with `add_indicator=True` and `set_output(transform=\"pandas\")`\n",
+    "1. Run the imputer's `fit_transform` on the training set.\n",
+    "1. How many output features are there in the transformed data?\n",
+    "1. Are there any new features added to the transformed data?"
    ]
   },
   {
@@ -267,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19898a2a-e08f-44c9-addf-04bc80e620b7",
+   "id": "c2b59b2a-28c9-4e5e-a440-11f2b3dccb2c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -299,10 +302,10 @@
    "source": [
     "## Exercise 2\n",
     "\n",
-    "1. Build a pipeline with the `StandardScaler`, `KNNImputer(add_indicator=True)`, and `LogisticRegression` and configured for pandas output.\n",
+    "1. Build a pipeline named `pipe`, with the `StandardScaler`, `KNNImputer(add_indicator=True)`, and `LogisticRegression` and configured for pandas output.\n",
     "1. Train the pipeline on the Wisconsion cancer training set and evaluate the performance of the model on the test set.\n",
     "1. Create a pandas series where the values is the coefficients of `LogisticRegression` and index is the `feature_names_in_`.\n",
-    "    - **Hint**: The logistic regression estimator is the final step of the pipeline. \n",
+    "    - **Hint**: The logistic regression estimator is the final step of the pipeline. (`pipe[-1]`)\n",
     "    - **Hint**: The coefficients are stored as `coef_` in logistic regression estimator. (Use `ravel` to flatten the `coef_` array)\n",
     "1. Which feature has a negative impact on cancer?"
    ]
@@ -323,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98ba74c9-b351-4158-b60e-d48604bbfe64",
+   "id": "464f2941-f437-437f-ac5a-7c46bb21ef20",
    "metadata": {},
    "outputs": [],
    "source": []
