--- a/notebooks/02-categorical-data.ipynb
+++ b/notebooks/02-categorical-data.ipynb
@@ -888,6 +888,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7eeb23d5-953e-4548-bd62-496cae63557c",
+   "metadata": {},
+   "source": [
+    "### Back to Slides!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4b3faf8-86ca-4b1d-8e28-a194a1179693",
    "metadata": {},
    "source": [
@@ -1074,7 +1082,8 @@
    "source": [
     "## Exercise 1\n",
     "\n",
-    "1. The Penguin dataset is loaded into `X` and `y`. Is `y` a classification or regression problem?\n",
+    "1. The Penguin dataset is loaded into `X` and `y`.\n",
+    "1. Is `y` a classification or regression problem?\n",
     "1. What are the feature names in the dataset?\n",
     "1. Which features have missing values?\n",
     "1. What are the categorical features and the numerical features? Store them into `categorical_features` and `numerical_features` respectively.\n",
@@ -1101,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08534a10-f5cf-42f1-9096-35ac18650808",
+   "id": "177c6919-2a8a-41bb-a839-1916c48f5987",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1133,19 +1142,21 @@
    "source": [
     "## Exercise 2\n",
     "\n",
-    "1. Use `train_test_split` to split data into a training and test set. **Hint:** Use `random_state=0` and `stratify`\n",
+    "1. Use `train_test_split` to split data into a training and test set.\n",
+    "    - **Hint:** Use `random_state=0` and `stratify`\n",
     "1. Build a `ColumnTransformer` for the penguin dataset with the following transformers:\n",
     "    - For the numerical features use a `SimpleImputer`\n",
     "    - For the categorical features use a `OrdinalEncoder` with `encoded_missing_value=-1`.\n",
     "    - **Hint:** Use `verbose_feature_names_out=False`\n",
     "1. Build a pipeline with the `ColumnTransformer` from the previous step and a `RandomForestClassifier` with `random_state=0`.\n",
-    "1. Evalute the model on the test set."
+    "1. Evalute the model on the test set.\n",
+    "1. **Extra:** Plot the random forest's feature importances using a pandas series."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c28938-3168-47f8-aef6-bd26d9315a42",
+   "id": "257d6aed-72f3-47d3-914f-675d2c5bd31d",
    "metadata": {},
    "outputs": [],
    "source": []
