--- a/notebooks/03-parameter-tuning.ipynb
+++ b/notebooks/03-parameter-tuning.ipynb
@@ -55,7 +55,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "432491ae-a6b8-4341-be52-dd644ee6c21d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_digits\n",
@@ -159,7 +161,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "839522ac",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "grid_search.best_score_"
@@ -296,11 +300,11 @@
     "}\n",
     "```\n",
     "\n",
-    "Set `random_state=0` to have reproducable results, `verbose=1` to show the progress, and `n_iter=20`.\n",
+    "Set `random_state=0` to have reproducable results and `n_iter=20`.\n",
     "\n",
     "2. What were the best hyper-parameters found by the random search?\n",
     "3. Evaluate the model on the test set.\n",
-    "4. Use `HalvingRandomSearchCV` with the same `param_dist`. What is the best hyper-parameters found by this search? Evaluate on the test set. Does these hyperparameters perform better than the one found in step 1? \n",
+    "4. Use `HalvingRandomSearchCV` with the same `param_dist`. What is the best hyper-parameters found by this search? Evaluate on the test set.\n",
     "    - **Hint**: `n_iter` is not required and set `verbose=1`"
    ]
   },
@@ -329,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66666e8d-99e7-45f4-8322-154bf311d67d",
+   "id": "35cf77e6-9c38-47e5-aace-dabc98a8a02b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -345,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d44764-3162-45d5-86f8-543a863a7e4b",
+   "id": "9303a299-b823-4174-bfcd-2d645421d71f",
    "metadata": {
     "tags": []
    },
@@ -599,7 +603,7 @@
    "outputs": [],
    "source": [
     "grid_search = HalvingGridSearchCV(\n",
-    "    log_reg, params, verbose=1\n",
+    "    log_reg, params, verbose=1, n_jobs=2,\n",
     ")"
    ]
   },
@@ -648,16 +652,17 @@
    "source": [
     "## Exercise 2\n",
     "\n",
-    "1. A `column_transformer` is provided to preprocess the penguin dataset. Call `fit_transform` on `X_train` and store the output as `X_transformed`. Are there missing values in the transformed dataset?\n",
+    "1. A `column_transformer` is provided to preprocess the penguin dataset. Call `fit_transform` on `X_train` and store the output as `X_train_transformed`.\n",
+    "1. Are there missing values in the transformed dataset?\n",
     "1. Construct a Pipeline with the `column_transformer` and a `HistGradientBoostingClassifier`.\n",
     "    - **Hint:** Set the `random_state=0` for the gradient booster.\n",
     "1. Create a `HalvingGridSearchCV` with that searches through the following params in the gradient booster:\n",
-    "     - `l2_regularization`: `[0, 0.1, 1, 10]`\n",
-    "     - `hist__max_bins`: `[32, 64, 128, 255]`\n",
+    "     - `l2_regularization`: `[0.01, 0.1, 1, 10]`\n",
+    "     - `max_bins`: `[32, 64, 128, 255]`\n",
     "     - **Hint**: Use `get_params` to get the parameter name to search through.\n",
-    "     - **Hint**: Set `verbose=1` and `n_jobs` for your system.\n",
+    "     - **Hint**: Set `verbose=1`\n",
     "1. What is the best hyper-parameters found by this search?\n",
-    "1. Evaluate on the test set. Does these hyperparameters perform better than the logistic regression model? "
+    "1. Evaluate on the test set."
    ]
   },
   {
@@ -674,6 +679,7 @@
     "import numpy as np\n",
     "\n",
     "cat_prep = OrdinalEncoder(handle_unknown=\"use_encoded_value\", unknown_value=np.nan)\n",
+    "\n",
     "column_transformer = ColumnTransformer([\n",
     "    (\"categorical\", cat_prep, categorical_features),\n",
     "    (\"numerical\", \"passthrough\", numerical_features),\n",
@@ -683,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0eb7fde-e2ec-46ea-8db8-a74776f12240",
+   "id": "be0e83d5-a3a3-41c0-b646-41b3684a91b6",
    "metadata": {},
    "outputs": [],
    "source": []
