--- a/notebooks/04-model-evaluation.ipynb
+++ b/notebooks/04-model-evaluation.ipynb
@@ -236,7 +236,7 @@
    "source": [
     "# Exercise 1\n",
     "\n",
-    "1. Fit a `sklearn.ensemble.RandomForestClassifier` model on the same dataset.\n",
+    "1. Fit a `sklearn.ensemble.RandomForestClassifier` model on the training set.\n",
     "    - **Hint**: Use `random_state=0`\n",
     "3. Compute the random forest's predictions on the test set and print the classification report.\n",
     "4. Compare the classification report of the random forest to logistic regression. Which one has the better overall performance?"
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13325434-df65-4017-af62-119b177149a5",
+   "id": "354e2bd8-ccac-42ef-9979-4c050defd8e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -492,10 +492,8 @@
    "outputs": [],
    "source": [
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 4))\n",
-    "RocCurveDisplay.from_estimator(\n",
-    "    log_reg, X_test, y_test, name=\"LogisticRegression\", ax=ax1)\n",
-    "PrecisionRecallDisplay.from_estimator(\n",
-    "    log_reg, X_test, y_test, name=\"LogisticRegression\", ax=ax2);"
+    "RocCurveDisplay.from_estimator(log_reg, X_test, y_test, name=\"LogisticRegression\", ax=ax1)\n",
+    "PrecisionRecallDisplay.from_estimator(log_reg, X_test, y_test, name=\"LogisticRegression\", ax=ax2);"
    ]
   },
   {
@@ -524,7 +522,7 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 4))\n",
     "PrecisionRecallDisplay.from_estimator(log_reg, X_test, y_test, ax=ax, name=\"Logistic Regression\")\n",
-    "PrecisionRecallDisplay.from_estimator(rf, X_test, y_test, ax=ax, name=\"Random Forest\")"
+    "PrecisionRecallDisplay.from_estimator(rf, X_test, y_test, ax=ax, name=\"Random Forest\");"
    ]
   },
   {
@@ -558,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0404cc8f-46d9-4b6f-9f60-221211cdc313",
+   "id": "c5a10b4c-c053-420d-a1cb-49aec8e6545f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -580,7 +578,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load solutions/04-ex05-solutions.py"
+    "# %load solutions/04-ex02-solutions.py"
    ]
   },
   {
@@ -628,6 +626,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03c9b12a-0899-444b-9618-343084de05f2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "y_pred_log_reg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9125e674-f325-4ee7-8acf-51177126fb08",
    "metadata": {
     "tags": []
@@ -655,6 +665,18 @@
    "outputs": [],
    "source": [
     "y_decision_log_reg = log_reg.decision_function(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c60f5e5-87b1-49ba-9892-902bde898a94",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "y_decision_log_reg"
    ]
   },
   {
@@ -712,13 +734,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d20bb7c-b395-4c68-8e28-267e110bbf49",
+   "id": "5a39158b-a9ef-40ce-87c4-3df187bba251",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "1/(1 + np.exp(-y_decision_log_reg))"
+    "from scipy.special import expit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbaedfea-42d6-4934-b932-6d8b010e078f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "expit(y_decision_log_reg)"
    ]
   },
   {
@@ -802,7 +836,8 @@
    "source": [
     "## Exercise 3\n",
     "\n",
-    "1. Compute the `roc_auc_score` for the random forest on the test set. **Hint**: Use `predict_proba`.\n",
+    "1. Compute the `roc_auc_score` for the random forest on the test set.\n",
+    "    **Hint**: Use `predict_proba`.\n",
     "2. Train a `sklearn.svm.SVC` model on the training dataset with `random_state=0`\n",
     "3. Compute the average precision on the test set.\n",
     "    - **Hint**: Use `decision_function`."
@@ -825,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c8187d-f6b2-4e86-aa8e-847c9421f769",
+   "id": "d7b5a9ac-7434-4487-bd45-5440fa1f93d9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -864,6 +899,15 @@
    "metadata": {},
    "source": [
     "## Parameter Search with different metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1526ed7-31fe-47d6-a817-d59fa2d30142",
+   "metadata": {},
+   "source": [
+    "### Using a string\n",
+    "Listed in [documentation](https://scikit-learn.org/stable/modules/model_evaluation.html#common-cases-predefined-values)"
    ]
   },
   {
@@ -1166,6 +1210,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "81d81d4f-7fc1-4cde-843c-b334a8396144",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rf_perm_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "aa5ab57a-b873-4d06-a60b-21df9665b431",
    "metadata": {
     "tags": []
@@ -1250,8 +1306,8 @@
     "## Exercise 4\n",
     "\n",
     "1. Create and train a `HistGradientBoostingRegressor` model.\n",
-    "1. Plot the permutation importance for the gradient boosting model with `n_repeats=5` and `random_state=0`.\n",
     "1. Evaluate the model on the test set using `score`.\n",
+    "1. Plot the permutation importance for the gradient boosting model with `n_repeats=5` and `random_state=0`.\n",
     "1. How does the permtuation feature imporatance compare to random forest?"
    ]
   },
@@ -1270,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85deadf-83a7-4142-915b-f29f75c9ef37",
+   "id": "4a1f1e7d-674b-4ba6-9e5f-24a287562912",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1498,16 +1554,28 @@
     "## Exercise 5\n",
     "\n",
     "1. Get the permutation importance of the gradient booster (`hist`) using `permutation_importance` and `scoring=\"neg_mean_absolute_error\"`.\n",
+    "    - Store the permutation importance in `hist_perm_results` variable.\n",
     "    - **Hint**: Use `n_repeats=5` and `random_state=0`.\n",
-    "2. Plot the permutation importance of `hist` on the test set, by using `plot_permutation_importance` and `top_k=10`.\n",
+    "2. Plot the permutation importance of `hist` by using `plot_permutation_importance` and `top_k=10`.\n",
     "3. Extract the top 4 features according to permutation importance into a variable `top_4_features`.\n",
-    "4. Use `PartialDependenceDisplay.from_estimator` to plot the partial dependence of the `top_4_features."
+    "    - **Hint**: Use [np.argsort](https://numpy.org/doc/stable/reference/generated/numpy.argsort.html) on `hist_perm_results[\"importance_mean\"]` and slice the array to get the top 4 features.\n",
+    "4. Use `PartialDependenceDisplay.from_estimator` to plot the partial dependence of the `top_4_features`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8124df21-dc48-4055-8554-5a965cc97569",
+   "id": "58ec72ff-6c7d-403e-bea5-4da06114aa8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6e7641e-bdb8-45ab-b155-5992f0f57bd6",
    "metadata": {},
    "outputs": [],
    "source": []
