FIX Fixes solution links

--- a/notebooks/04-model-evaluation.ipynb
+++ b/notebooks/04-model-evaluation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "96ec3141-4261-4d3f-989c-0e40bfb4702d",
    "metadata": {
@@ -59,6 +60,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "08739c51-c1fd-4b54-989b-0cd37c773b6a",
    "metadata": {},
@@ -146,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a602cf59-7d49-4b65-a10e-e8821f21999f",
    "metadata": {},
@@ -154,6 +157,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "70746a40-5a4b-40cd-9ace-eba5520b09cc",
    "metadata": {},
@@ -230,6 +234,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "13aaed6d-17ce-4ed5-b917-b5f05af13f68",
    "metadata": {},
@@ -263,6 +268,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df095f7a-ad65-4501-ae93-e00838d5fd43",
    "metadata": {},
@@ -283,6 +289,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30349f30",
    "metadata": {},
@@ -291,6 +298,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "52d7a10c-d3ba-48f4-9b4d-c4d85c3aca4a",
    "metadata": {},
@@ -299,6 +307,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b665c068-bc81-47c5-87c1-a5b03eff67a5",
    "metadata": {},
@@ -320,6 +329,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "181030bc-82e4-4076-b51a-50369ef89be2",
    "metadata": {},
@@ -364,6 +374,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2a67775d-d8ea-4911-a7bc-849d44ea2a31",
    "metadata": {},
@@ -385,6 +396,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e894d969-99f7-4d98-8ce0-dcec3135278c",
    "metadata": {},
@@ -419,6 +431,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "22ff24bd-8a72-49d2-a705-4fa38b1872a4",
    "metadata": {},
@@ -463,6 +476,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b97b841e-675e-4fc5-9366-13a7761f00d0",
    "metadata": {},
@@ -526,6 +540,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8121d388-e279-4a21-85fb-7795522741d6",
    "metadata": {
@@ -562,6 +577,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad4c57de-47dd-4670-97e3-1ffaef5a870c",
    "metadata": {},
@@ -582,6 +598,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a4fe23f2-265d-4df2-b1e7-9048a4073983",
    "metadata": {},
@@ -592,6 +609,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a8b13b4d-9655-4398-9b85-ac27dc902f95",
    "metadata": {},
@@ -648,6 +666,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "808afae9-140f-4ad4-9b88-bfb104beacbc",
    "metadata": {},
@@ -680,6 +699,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b9161da8-c27a-4518-91b3-97ec2466b0ab",
    "metadata": {},
@@ -724,6 +744,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "be8e6c56-d9d5-4f00-ae9d-9322a132adcb",
    "metadata": {},
@@ -768,6 +789,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fad05709-885d-4989-93b1-24364c867fcd",
    "metadata": {},
@@ -788,6 +810,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b67edf68-42a4-46b0-9864-59fc3877ddec",
    "metadata": {},
@@ -808,6 +831,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7373659b-82c3-4acc-87cf-e2d1da44caa8",
    "metadata": {
@@ -830,6 +854,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0fcd0c4f-7533-4a5e-a044-95b04cbc34b9",
    "metadata": {},
@@ -866,6 +891,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7b6b5b13-0568-436d-b3ce-e4813d7c8159",
    "metadata": {},
@@ -886,6 +912,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e16eee6f-f5db-48de-bd87-9efcbf30afa3",
    "metadata": {},
@@ -894,6 +921,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a97f6a56-a6a2-440b-b8e3-1837d685f3aa",
    "metadata": {},
@@ -902,6 +930,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a1526ed7-31fe-47d6-a817-d59fa2d30142",
    "metadata": {},
@@ -966,6 +995,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2322af45-2df9-4e9c-9a1d-6805c5d6553e",
    "metadata": {},
@@ -1023,6 +1053,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf84f4cf-365c-4cb2-83a7-b50ffe8450ae",
    "metadata": {},
@@ -1074,6 +1105,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a59d0ac2",
    "metadata": {},
@@ -1082,6 +1114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a1413b3-0d5b-4381-b925-551155605434",
    "metadata": {},
@@ -1090,6 +1123,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4f7d266f-6b9d-4796-92bf-1d90eb233972",
    "metadata": {},
@@ -1180,6 +1214,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "62e98de4-91f8-40ca-a437-5a90d9977822",
    "metadata": {},
@@ -1253,6 +1288,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3746271f-b2dc-4df9-b7e1-b60a55202b50",
    "metadata": {},
@@ -1299,6 +1335,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "877942a9-a1a8-4355-ac9e-3f196fab2e84",
    "metadata": {},
@@ -1332,6 +1369,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dadcfb38-71dd-409a-8650-06a0c1765682",
    "metadata": {},
@@ -1352,6 +1390,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c5f8bf2c",
    "metadata": {},
@@ -1360,6 +1399,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3162e904-8f53-4e00-ac0e-a6ced57dbe41",
    "metadata": {
@@ -1409,6 +1449,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "553013c6-ec5e-480e-9b4c-13310e07a8f0",
    "metadata": {},
@@ -1547,6 +1588,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c069c22-5ee7-405e-bf54-949e0deb56c9",
    "metadata": {},
@@ -1581,6 +1623,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "162bf279-6e00-47a9-b9cf-41deacd2c17b",
    "metadata": {},
